make change on actions

--- a/demo1/pages/back-office/groups/groups-edit.html
+++ b/demo1/pages/back-office/groups/groups-edit.html
@@ -57,7 +57,7 @@ License: For each use you must have a valid license purchased only from above li
         <!-- partial:partials/_sidebar.html -->
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="../../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+                <img src="../../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
                 <div class="sidebar-toggler not-active">
                     <span></span>
                     <span></span>
@@ -436,7 +436,7 @@ License: For each use you must have a valid license purchased only from above li
                                             value="Remote Agent">
                                     </div>
                                     <div class="w-25 d-flex align-items-center mt-3">
-                                        <button class="btn btn-primary w-50" type="button" id="editGroupName">
+                                        <button class="btn btn-primary w-50 disabled" type="button" id="editGroupName">
                                             Edit</button>
                                     </div>
                                 </div>
@@ -497,7 +497,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                 </div>
                                 <div class="tab-content border border-top-0 p-3" id="permissionTabContent"
-                                    style="height: 325px !important;">
+                                    style="height: 325px !important; pointer-events: none;">
                                     <div class="tab-pane fade show active h-100" id="quotationPermissionTab"
                                         role="tabpanel" aria-labelledby="quotation-permission-tab">
                                         <form id="quotationPermissionForm"
@@ -577,7 +577,7 @@ License: For each use you must have a valid license purchased only from above li
                                                 </div>
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editQuotePermissions">
                                                     Save</button>
                                             </div>
@@ -656,7 +656,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editPolicyPermissions">
                                                     Save</button>
                                             </div>
@@ -743,7 +743,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editEndorsementPermissions">
                                                     Save</button>
                                             </div>
@@ -831,7 +831,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editTransactionPermissions">
                                                     Save</button>
                                             </div>
@@ -887,7 +887,7 @@ License: For each use you must have a valid license purchased only from above li
                                                 </div>
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editCancelationPermissions">
                                                     Save</button>
                                             </div>
@@ -965,7 +965,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editRenewalPermissions">
                                                     Save</button>
                                             </div>
@@ -1070,7 +1070,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                             </div>
                                             <div class="d-flex justify-content-center my-3 w-100">
-                                                <button class="btn btn-primary" style="width: 9rem;" type="button"
+                                                <button class="btn btn-primary disabled" style="width: 9rem;" type="button"
                                                     id="editClaimsPermissions">
                                                     Save</button>
                                             </div>
@@ -1092,7 +1092,7 @@ License: For each use you must have a valid license purchased only from above li
 
                                     </div>
                                     <div class="me-2">
-                                        <a type="button" data-bs-toggle="modal" data-bs-target="#addAgentModalCenter">
+                                        <a type="button" data-bs-toggle="modal" data-bs-target="#addAgentModalCenter" class="btn btn-link disabled p-0">
                                             <i class="icon-xl text-muted mb-2" data-feather="plus-circle"></i>
                                         </a>
 
