--- a/demo1/pages/back-office/groups/groups.html
+++ b/demo1/pages/back-office/groups/groups.html
@@ -57,7 +57,7 @@ License: For each use you must have a valid license purchased only from above li
         <!-- partial:partials/_sidebar.html -->
         <nav class="sidebar">
             <div class="sidebar-header">
-                <img src="../../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+                <img src="../../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
                 <div class="sidebar-toggler not-active">
                     <span></span>
                     <span></span>
@@ -429,7 +429,7 @@ License: For each use you must have a valid license purchased only from above li
                     <div class="col-12 col-xl-12 stretch-card">
                         <div class="card">
                             <div class="card-body">
-                                <a href="./group-add.html" class="btn btn-primary btn-lg m-3">
+                                <a href="" class="btn btn-primary btn-lg m-3 disabled">
                                     <i data-feather="plus" class="me-2 icon-md"></i>
                                     Add Group
                                 </a>
@@ -474,7 +474,7 @@ License: For each use you must have a valid license purchased only from above li
                                             class="col-3 align-items-center d-flex justify-content-center flex-column py-4">
                                             <p class="fs-4 fw-bold text-uppercase">Delete</p>
                                             <button
-                                                class="align-items-center border d-flex fs-2 h-50 justify-content-center mt-3 rounded-3 w-25 bg-transparent"
+                                                class="btn align-items-center border d-flex fs-2 h-50 justify-content-center mt-3 rounded-3 w-25 bg-transparent disabled"
                                                 onclick="showSwal('passing-parameter-execute-delete-group')">
                                                 <i data-feather="trash-2" class="text-bitbucket"></i>
                                             </button>
@@ -513,7 +513,7 @@ License: For each use you must have a valid license purchased only from above li
                                             class="col-3 align-items-center d-flex justify-content-center flex-column py-4">
                                             <p class="fs-4 fw-bold text-uppercase">Delete</p>
                                             <button
-                                                class="align-items-center border d-flex fs-2 h-50 justify-content-center mt-3 rounded-3 w-25 bg-transparent"
+                                                class="btn align-items-center border d-flex fs-2 h-50 justify-content-center mt-3 rounded-3 w-25 bg-transparent disabled"
                                                 onclick="showSwal('passing-parameter-execute-delete-group')">
                                                 <i data-feather="trash-2" class="text-bitbucket"></i>
                                             </button>
