--- a/demo1/dashboard.html
+++ b/demo1/dashboard.html
@@ -52,7 +52,7 @@ License: For each use you must have a valid license purchased only from above li
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar">
       <div class="sidebar-header">
-        <img src="../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+        <img src="../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
         <div class="sidebar-toggler not-active">
           <span></span>
           <span></span>
@@ -498,7 +498,7 @@ License: For each use you must have a valid license purchased only from above li
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-baseline mb-4 mb-md-3">
                   <h6 class="card-title mb-0">GWP</h6>
-                  <div class="dropdown">
+                  <!-- <div class="dropdown">
                     <a type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">
                       <i class="icon-lg text-muted pb-3px" data-feather="more-horizontal"></i>
@@ -511,7 +511,7 @@ License: For each use you must have a valid license purchased only from above li
                           class="icon-sm me-2"></i>
                         <span class="">Download</span></a>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row align-items-start">
                   <div class="col-md-7">
