--- a/demo1/pages/client-profile/client-profile.html
+++ b/demo1/pages/client-profile/client-profile.html
@@ -55,7 +55,7 @@ License: For each use you must have a valid license purchased only from above li
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar">
       <div class="sidebar-header">
-        <img src="../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+        <img src="../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
         <div class="sidebar-toggler not-active">
           <span></span>
           <span></span>
@@ -762,10 +762,7 @@ License: For each use you must have a valid license purchased only from above li
                                         <td>01/01/2022</td>
                                         <td>Carl</td>
                                         <td>Henson</td>
-                                        <td>
-                                          <a href="#">
-                                            <i data-feather="trash-2" class="action-icon"></i>
-                                          </a>
+                                        <td class="text-center">
                                           <a type="button" class="position-relative" data-bs-toggle="modal"
                                             data-bs-target="#addClaimModalCenter">
                                             <i data-feather="edit-3" class="action-icon"></i>
