--- a/demo1/pages/general-search/general-search.html
+++ b/demo1/pages/general-search/general-search.html
@@ -55,7 +55,7 @@ License: For each use you must have a valid license purchased only from above li
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar">
       <div class="sidebar-header">
-        <img src="../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+        <img src="../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
         <div class="sidebar-toggler not-active">
           <span></span>
           <span></span>
@@ -497,14 +497,7 @@ License: For each use you must have a valid license purchased only from above li
                         </div>
                         <div class="col-md-6">
                           <label class="form-label" for="selectRegionQuote">Rut:</label>
-                          <select id="selectRegionQuote" class="js-example-basic-single form-select form-control"
-                            data-width="100%" name="selectRegionQuote">
-                            <option value="TX">Texas</option>
-                            <option value="NY">New York</option>
-                            <option value="FL">Florida</option>
-                            <option value="KN">Kansas</option>
-                            <option value="HW">Hawaii</option>
-                          </select>
+                          <input id="quoteRut" class="form-control" data-width="100%" name="quoteRut">
                         </div>
                       </div>
                       <div class="row mb-3 justify-content-center">
@@ -737,13 +730,7 @@ License: For each use you must have a valid license purchased only from above li
                         </div>
                         <div class="col-md-6">
                           <label class="form-label">Rut:</label>
-                          <select class="js-example-basic-single form-select" data-width="100%">
-                            <option value="TX">Texas</option>
-                            <option value="NY">New York</option>
-                            <option value="FL">Florida</option>
-                            <option value="KN">Kansas</option>
-                            <option value="HW">Hawaii</option>
-                          </select>
+                          <input id="policyRut" class="form-control" data-width="100%" name="policyRut">
                         </div>
                       </div>
                       <div class="row mb-3 justify-content-center">
@@ -975,13 +962,7 @@ License: For each use you must have a valid license purchased only from above li
                         </div>
                         <div class="col-md-6">
                           <label class="form-label">Rut:</label>
-                          <select class="js-example-basic-single form-select" data-width="100%">
-                            <option value="TX">Texas</option>
-                            <option value="NY">New York</option>
-                            <option value="FL">Florida</option>
-                            <option value="KN">Kansas</option>
-                            <option value="HW">Hawaii</option>
-                          </select>
+                          <input id="claimRut" class="form-control" data-width="100%" name="claimRut">
                         </div>
                       </div>
                       <div class="row mb-3 justify-content-center">
@@ -1047,15 +1028,19 @@ License: For each use you must have a valid license purchased only from above li
 
                             <td>Health Insurance</td>
                             <td>
-                              <span class="badge bg-primary">Pending</span>
+                              <span class="badge bg-primary">Incomplete</span>
                             </td>
                             <td>01/05/2022</td>
                             <td>Jensen</td>
                             <td>Combs</td>
                             <td>Leonardo.Payne&commat;test.com</td>
                             <td class="text-center">
-                              <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
-                                <i data-feather="eye" class="action-icon"></i>
+                              <a type="button" class="position-relative" data-bs-toggle="modal" data-bs-target="#addClaimModalCenter">
+                                <i data-feather="edit-3" class="action-icon"></i>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                  !
+                                  <span class="visually-hidden">Issue</span>
+                                </span>
                               </a>
                             </td>
                           </tr>
@@ -1173,13 +1158,7 @@ License: For each use you must have a valid license purchased only from above li
                         </div>
                         <div class="col-md-6">
                           <label class="form-label">Rut:</label>
-                          <select class="js-example-basic-single form-select" data-width="100%">
-                            <option value="TX">Texas</option>
-                            <option value="NY">New York</option>
-                            <option value="FL">Florida</option>
-                            <option value="KN">Kansas</option>
-                            <option value="HW">Hawaii</option>
-                          </select>
+                          <input id="transactionRut" class="form-control" data-width="100%" name="transactionRut">
                         </div>
                       </div>
                       <div class="row mb-3 justify-content-center">
@@ -1365,7 +1344,10 @@ License: For each use you must have a valid license purchased only from above li
                                 data-feather="calendar"></i></span>
                           </div>
                         </div>
-                        <div class="col-md-6"></div>
+                        <div class="col-md-6">
+                          <label class="form-label">Rut:</label>
+                          <input id="clientRut" class="form-control" data-width="100%" name="clientRut">
+                        </div>
                       </div>
                       <div class="row mb-3 justify-content-center">
                         <!-- <div class="col-md-6"></div> -->
@@ -1552,7 +1534,12 @@ License: For each use you must have a valid license purchased only from above li
                           </div>
                         </div>
                       </div>
-
+                      <div class="row mb-3">
+                        <div class="col-md-6">
+                          <label class="form-label">Rut:</label>
+                          <input id="agentRut" class="form-control" data-width="100%" name="agentRut">
+                        </div>
+                      </div>
                       <div class="row mb-3 justify-content-center">
                         <!-- <div class="col-md-6"></div> -->
                         <div class="col-md-3 col-3 align-self-center mb-3 mt-3 d-flex">
