--- a/demo1/pages/quote-detail/quote-detail.html
+++ b/demo1/pages/quote-detail/quote-detail.html
@@ -55,7 +55,7 @@ License: For each use you must have a valid license purchased only from above li
     <!-- partial:../../partials/_sidebar.html -->
     <nav class="sidebar">
       <div class="sidebar-header">
-        <img src="../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+        <img src="../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
         <div class="sidebar-toggler not-active">
           <span></span>
           <span></span>
@@ -583,10 +583,10 @@ License: For each use you must have a valid license purchased only from above li
                   <h6 class="card-title mb-0 fw-bolder fs-5">Files</h6>
 
                   <div class="dropdown mb-2">
-                    <a type="button" data-bs-toggle="modal" data-bs-target="#addFileModalCenter">
+                    <a type="button" data-bs-toggle="modal" data-bs-target="#addFileModalCenter" style="pointer-events: none;">
                       <i class="icon-lg text-muted mb-2" data-feather="plus-circle"></i>
                     </a>
-                    <a href="../files/files.html"><i data-feather="list" class="icon-lg text-muted mb-2 ms-1 me-2"></i>
+                    <a href="../files/files.html" class="btn btn-link disabled p-0"><i data-feather="list" class="icon-lg text-muted mb-2 ms-1 me-2"></i>
                     </a>
                   </div>
                 </div>
