--- a/demo1/pages/view-claims/view-claims.html
+++ b/demo1/pages/view-claims/view-claims.html
@@ -55,7 +55,7 @@ License: For each use you must have a valid license purchased only from above li
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar">
       <div class="sidebar-header">
-        <img src="../../../assets/images/others/Exponential-logo.png" class="sidebar-brand sidebar-img" />
+        <img src="../../../assets/images/others/logo_rojo-old.png" class="sidebar-brand sidebar-img" />
         <div class="sidebar-toggler not-active">
           <span></span>
           <span></span>
@@ -448,15 +448,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Leonardo</td>
                       <td>Payne</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
+                      <td class="text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
@@ -470,10 +464,7 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Carl</td>
                       <td>Henson</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
-                        <a href="#">
-                          <i data-feather="trash-2" class="action-icon"></i>
-                        </a>
+                      <td class="text-center">
                         <a type="button" class="position-relative" data-bs-toggle="modal"
                           data-bs-target="#addClaimModalCenter">
                           <i data-feather="edit-3" class="action-icon"></i>
@@ -494,15 +485,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Jensen</td>
                       <td>Combs</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
+                      <td class="text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
@@ -516,15 +501,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Amiah</td>
                       <td>Burton</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
+                      <td class="text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
@@ -538,15 +517,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Yaretzi</td>
                       <td>Mayo</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
+                      <td class="text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
@@ -560,15 +533,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td>Carl</td>
                       <td>Henson</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td>
+                      <td class="text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
@@ -582,15 +549,9 @@ License: For each use you must have a valid license purchased only from above li
                       <td class="border-bottom">Jensen</td>
                       <td class="border-bottom">Combs</td>
                       <td>Leonardo.Payne@test.com</td>
-                      <td class="border-bottom">
+                      <td class="border-bottom text-center">
                         <a type="button" data-bs-toggle="modal" data-bs-target="#claimViewModal">
                           <i data-feather="eye" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="download" class="action-icon"></i>
-                        </a>
-                        <a href="#">
-                          <i data-feather="mail" class="action-icon"></i>
                         </a>
                       </td>
                     </tr>
