disabled the quote download and add icons to the products

--- a/demo1/pages/products/products.html
+++ b/demo1/pages/products/products.html
@@ -423,7 +423,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                         <div class="row align-items-center">
                                             <div class="col-3">
-                                                <img src="../../../assets/images/icons/home.png" class="w-100 p-1"/>
+                                                <!-- <img src="../../../assets/images/products-blue/casa.svg" class="w-100 p-1"/> -->
+                                                <img src="../../../assets/images/products-blue-and-red/casa.svg" class="w-100 p-1"/>
                                             </div>
                                             <div class="col-9 px-3">
                                                 <div class="card-title">Home Insurance</div>
@@ -442,7 +443,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                     <div class="row align-items-center">
                                         <div class="col-3">
-                                            <img src="../../../assets/images/icons/car.png" class="w-100" />
+                                            <!-- <img src="../../../assets/images/products-blue/auto.svg" class="w-100" /> -->
+                                            <img src="../../../assets/images/products-blue-and-red/auto.svg" class="w-100" />
                                         </div>
                                         <div class="col-9 px-3">
                                             <div class="card-title">Car Insurance</div>
@@ -461,7 +463,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                     <div class="row align-items-center">
                                         <div class="col-3">
-                                            <img src="../../../assets/images/icons/bicycle.png" class="w-100" />
+                                            <!-- <img src="../../../assets/images/products-blue/bicicleta.svg" class="w-100" /> -->
+                                            <img src="../../../assets/images/products-blue-and-red/bicicleta.svg" class="w-100" />
                                         </div>
                                         <div class="col-9 px-3">
                                             <div class="card-title">Bicycle Insurance</div>
@@ -480,7 +483,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                     <div class="row align-items-center">
                                         <div class="col-3">
-                                            <img src="../../../assets/images/icons/health.png" class="w-100" />
+                                            <!-- <img src="../../../assets/images/products-blue/escudo.svg" class="w-100 p-1" /> -->
+                                            <img src="../../../assets/images/products-blue-and-red/escudo.svg" class="w-100 p-1" />
                                         </div>
                                         <div class="col-9 px-3">
                                             <div class="card-title">Health Insurance</div>
@@ -499,7 +503,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                     <div class="row align-items-center">
                                         <div class="col-3">
-                                            <img src="../../../assets/images/icons/life.png" class="w-100" />
+                                            <!-- <img src="../../../assets/images/products-blue/salud.svg" class="w-100 p-1" /> -->
+                                            <img src="../../../assets/images/products-blue-and-red/salud.svg" class="w-100 p-1" />
                                         </div>
                                         <div class="col-9 px-3">
                                             <div class="card-title">Life Insurance</div>
@@ -518,7 +523,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <div class="card-body">
                                     <div class="row align-items-center">
                                         <div class="col-3">
-                                            <img src="../../../assets/images/icons/camera.png" class="w-100" />
+                                            <!-- <img src="../../../assets/images/products-blue/camara.svg" class="w-100 p-1" /> -->
+                                            <img src="../../../assets/images/products-blue-and-red/camara.svg" class="w-100 p-1" />
                                         </div>
                                         <div class="col-9 px-3">
                                             <div class="card-title">Camera Insurance</div>
