--- a/demo1/pages/quote-detail/quote-detail.html
+++ b/demo1/pages/quote-detail/quote-detail.html
@@ -473,7 +473,7 @@ License: For each use you must have a valid license purchased only from above li
                   <button type="button" class="btn btn-info btn-icon shadow-sm">
                     <i data-feather="eye"></i>
                   </button>
-                  <button type="button" class="btn btn-info btn-icon shadow-sm">
+                  <button type="button" class="btn btn-info btn-icon shadow-sm disabled">
                     <i data-feather="download"></i>
                   </button>
                   <!-- <button type="button" class="btn btn-info btn-icon shadow-sm">
