fix the logo in signin and signup

--- a/demo1/pages/auth/forget-pass.html
+++ b/demo1/pages/auth/forget-pass.html
@@ -82,7 +82,7 @@ License: For each use you must have a valid license purchased only from above li
                     <div class="auth-form-wrapper px-4 py-5">
                       <img
                         src="../../../assets/images/others/logo_rojo-old.png"
-                        class="sidebar-brand sidebar-img d-block -mb-2 -ms-2"
+                        class="d-block w-50 mb-3" style="margin-left: -4px;"
                       />
                       <h5 class="text-muted fw-normal mb-4">
                         Forgot Password! Create a new one.
