--- a/demo1/pages/auth/login.html
+++ b/demo1/pages/auth/login.html
@@ -58,7 +58,7 @@
                 <div class="ps-3">
                   <div class="auth-form-wrapper px-4 py-5">
                     <img src="../../../assets/images/others/logo_rojo-old.png"
-                      class="sidebar-brand sidebar-img d-block -mb-2" style="margin-left: -2.2rem;" />
+                      class="d-block w-50 mb-3" style="margin-left: -4px;" />
                     <h5 class="text-muted fw-normal mb-4">
                       Log in to your account.
                     </h5>
